[project]
name = "org-calendar"
version = "0.2.0"
description = "Simple ORG mode calendar synch tool"
authors = [
    {name = "Aliaksandr Sharstniou",email = "a.sharstniou.dev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "icalendar (>=6.3.1,<7.0.0)",
    "recurring-ical-events (>=3.8.0,<4.0.0)",
]

[project.scripts]
org_calendar = "org_calendar.main:main"
build = "org_calendar.installer:install"

[tool.poetry]
packages = [{include = "org_calendar"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyright = "^1.1.403"
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
